--- a/01html/01tag/menu.html
+++ b/01html/01tag/menu.html
@@ -32,13 +32,45 @@
         .visual{
             background-color: green;
             height: 400px;
+            margin-bottom: 1em; /*margin-top으로 설정하면 오류가 많이 나기에, 위에꺼의 bottom값을 설정*/
         }
         
+        .section {
+            width: 1360px;
+            margin: 0 auto;
+        }
+        .section .secLeft{
+            float:left; width: 1000px;
+            background: skyblue;
+        }
+
+        .section .secRight{
+            float: right;
+            width: 300px;
+            background-color: pink;
+        }
+
+        .section div{
+            height: 700px;
+        }
+
+        .ft{
+            background: green;
+            padding: 20px 0;
+        }
+
+        .ft div{
+            width: 1360px;
+            margin: 0 auto;
+            text-align: center;
+            background-color: orange;
+            padding: 10px 0;
+        }
     </style>
 </head>
 <body>
     <header class="hd">
-        <ul class="menu clear">
+        <ul class="menu clear"> <!--w1360-->
             <li><a href="#">menu1</a></li>
             <li><a href="#">menu2</a></li>
             <li><a href="#">menu3</a></li>
@@ -47,11 +79,18 @@
         </ul>
 
     </header>
-    <div class="visual"></div>
+    <div class="visual">slide</div>
+
+    <section class="section clear">
+        <div class="secLeft">left</div>
+        <div class="secRight">right</div>
+    </section>
+
+    <footer class="ft">
+        <div> <!--w1360-->
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis soluta earum voluptate, illo porro quos atque architecto, distinctio modi praesentium odio reiciendis, ipsa dolores. Incidunt ratione a accusantium sequi eveniet.
+
+        </div>
+    </footer>
 </body>
 </html>
-
-<!--
-
-
--->
