--- a/01html/01tag/menu.html
+++ b/01html/01tag/menu.html
@@ -12,7 +12,7 @@
             content:"";
             display: block;
             clear: both;  
-        }
+        } /*자식 요소 중에 맨 뒤. before는 자식 요소 중 맨 앞.*/
 
         .hd{background-color: blue;}
 
