--- a/01html/01tag/flex01.html
+++ b/01html/01tag/flex01.html
@@ -37,20 +37,20 @@
         <ul class="slide">
             <li class="item st1">
                 <div class="textWrap">
-                    <p class="title"> <strong>1게임아카데미</strong></p>
+                    <h1 class="title">1게임아카데미</h1>
                     <span class="subt">미래의 꿈 게임에 담다</span>
                 </div>
                 
             </li>
             <li class="item st2">
                 <div class="textWrap">
-                    <p class="title"><strong>2게임아카데미</strong></p>
+                    <h1 class="title">2게임아카데미</h1>
                     <span class="subt">미래의 꿈 게임에 담다</span>
                 </div>
             </li>
             <li class="item st3">
                 <div class="textWrap">
-                    <p class="title"><strong>3게임아카데미</strong></p>
+                    <h1 class="title">3게임아카데미</h1>
                     <span class="subt">미래의 꿈 게임에 담다</span>
                 </div>
             </li>
@@ -126,12 +126,27 @@
             <div class="subArea">
                 <p class="title">재단소식</p>
             </div>
-            <div class="categoryArea"></div>
+            <div class="categoryArea">
+                <button class="on">공지사항</button>
+                <button class="on">뉴스룸</button>
+                <button class="on">소셜미디어</button>
+            </div>
             <div class="contentArea"></div>
         </div>
     </div>
 
-    <div class="top"></div>
+    <footer>
+        <div class="ci">
+            <p>넷마블문화재단</p>
+        </div>
+        <div class="copyright">
+            <p>서울특별시 구로구 디지털로26길 38, G-Tower 넷마블<br>
+                Copyright © Netmarble Corp. All Rights Reserved.
+            </p>
+        </div>
+    </footer>
+
+    <!-- <div class="top"></div> -->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bxslider/4.2.17/jquery.bxslider.min.js" integrity="sha512-LaBO0tZh1+6Ebk+EnHt/WsGM0UnmkCXfQ1rfhGmpa5MXUdslNuSSELBRcteHKz4k4ny+Op10Ax2fPoTNq+VcUg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
